# dgc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: .gitignore
docker/: .env  Readme.md  docker-compose.yml
docker/src/: Dockerfile  bench.py  drop_caches.sh  fix_permissions.sh  run.sh  sql_shopa_func.py
src/: CHParser.h  Timer.h  c.h  ch.h  dgc-create.cpp  dgc-query.cpp
